# python-packaging-tools

./: .cruft.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  noxfile.py  pyproject.toml  ruff.toml
.github/: ISSUE_TEMPLATE.md
config/: recipe-append.yaml
docs/: conf.py  installation.md
docs/examples/: example-usage.md  index.md
docs/examples/usage/: demo.ipynb
docs/reference/: index.md
example-conda-env/: Makefile  py312-example-env-lock.yml
example-virtual-env/: Makefile
examples/data/: create_params.py  params.csv
examples/usage/: Slides.ipynb  Untitled.ipynb  calculation.ipynb  demo.ipynb  example-for-linting.ipynb
requirements/: py310-test.yaml  py311-test.yaml  py312-conda-env.yaml  py312-dev.yaml  py312-example-env.yaml  py312-test.yaml  py313-test.yaml  py38-test.yaml  py39-test.yaml
requirements/lock/: py312-conda-env.txt  py312-conda-env.txt.hash.json
scripts/: calculate_effective_density.py  calculate_virial.py  calculate_virial_standalone.py
slides/: calculation-package.ipynb  calculation.ipynb  slides.ipynb
slides/example-conda-env/: Makefile  py312-example-env-lock.yml  py312-example-env.yaml
slides/example-virtual-env/: Makefile  example-env.txt  requirements.txt
src/python_packaging_tools/: __init__.py  __main__.py  cli.py  core.py
tests/: __init__.py  test_python_packaging_tools.py
