[build-system]
build-backend = "hatchling.build"
requires = [
    "hatch-fancy-pypi-readme",
    "hatch-vcs",
    "hatchling",
]

[project]
name = "python-packaging-tools"
description = "Demos on better python packaging"
keywords = [
    "python-packaging-tools",
]
license = "NIST-PD"
license-files = [ "LICENSE" ]
authors = [
    { name = "William P. Krekelberg", email = "wpk@nist.gov" },
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: Public Domain",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dynamic = [
    "readme",
    "version",
]
dependencies = [
    "pandas",
    "tqdm",
]
urls.Documentation = "https://pages.nist.gov/python-packaging-tools/"
urls.Homepage = "https://github.com/wpk-nist-gov/python-packaging-tools"
scripts.sw-second-virial = "python_packaging_tools.cli:main"

[dependency-groups]
dev = [
    { include-group = "dev-extras" },
    { include-group = "mypy" },
    { include-group = "nbval" },
    { include-group = "test" },
    { include-group = "typing" },
    { include-group = "uvxrun" },
]
test = [
    { include-group = "test-extras" },
]
docs = [
    "autodocsumm",
    "myst-nb; python_version>'3.9'",
    # myst-parser, ipython,
    "pyenchant",
    "sphinx>=5.3.0",
    "sphinx-argparse",
    "sphinx-book-theme",
    "sphinx-click",
    "sphinx-copybutton",
    "sphinxcontrib-spelling",
]
cog = [ "cogapp" ]
dev-extras = [
    "ipykernel",
    "ipython",
    "nbclient>=0.10.0",
    "nox>=2024.4.15",
    "pytest-accept",
]
docs-live = [
    "sphinx-autobuild",
    { include-group = "docs" },
]
mypy = [ "mypy>=1.14.0" ]
nbval = [ "nbval" ]
test-extras = [
    "pytest",
    "pytest-cov",
    "pytest-sugar",
    "pytest-xdist",
]
test-notebook = [
    { include-group = "nbval" },
    { include-group = "test-extras" },
]
typing = [
    "pandas-stubs",
    "pylint",
    "pytest",
    "types-tqdm",
    { include-group = "uvxrun" },
]
# Anything needed to run tools/uvxrun.py
# NOTE: uvxrun-tools defined explicitly in tool.pyproject2conda.envs.uvxrun-tools
uvxrun = [ "packaging" ]
example = [
    "ipykernel",
    "pandas",
]

[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version" }

[tool.hatch.build]
exclude = [
    ".*_cache",
]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [
    { path = "README.md" },
    { path = "CHANGELOG.md" },
    { path = "LICENSE" },
]

[tool.check-wheel-contents]
toplevel = [ "python_packaging_tools" ]
src_dir = [ "src" ]

[tool.pyproject-fmt]
# max_supported_python = "3.13"

# * Testing --------------------------------------------------------------------

[tool.pytest.ini_options]
addopts = [
    "--doctest-modules",
    "--doctest-glob=*.md",
    "--pyargs",
    "--cov-config=pyproject.toml",
]
testpaths = [
    "README.md",
    "python_packaging_tools",
    "tests",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
exclude_also = [
    "if TYPE_CHECKING:",
    "@overload",
]
omit = [
    "*/vendored/*",
    "*/_typing.py",
]
include = [
    "src/*",
]

[tool.coverage.paths]
source = [
    "src/",
    ".nox/**/site-packages/",
]

# * Typing ---------------------------------------------------------------------

[tool.mypy]
files = [
    "src",
    "tests",
    "examples/data",
    "scripts",
]
show_error_codes = true
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
exclude = [
    ".eggs",
    ".tox",
    ".nox",
    ".venv",
    ".numba_cache",
    "docs",
]
check_untyped_defs = true
strict = true

# [[tool.mypy.overrides]]
# ignore_missing_imports = true
# module = [  ]

# [[tool.mypy.overrides]]
# ignore_errors = true
# module = [  ]

[tool.pyright]
include = [
    "src",
    "tests",
    "examples/data",
    "scripts",
]
exclude = [
    "**/__pycache__",
    ".tox/**",
    ".nox/**",
    ".venv/**",
    "**/.mypy_cache",
    "**/.numba_cache",
]
strict = [
    "src",
    "tests",
    "noxfile.py",
    "tools/*.py",
    "examples/data",
]
pythonVersion = "3.11"
typeCheckingMode = "strict"
# typeCheckingMode = "basic"
# # enable subset of "strict"
# reportDuplicateImport = true
# reportInvalidStubStatement = true
# reportOverlappingOverload = true
# reportPropertyTypeMismatch = true
# reportUntypedClassDecorator = true
# reportUntypedFunctionDecorator = true
# reportUntypedNamedTuple = true
# reportUnusedImport = true
# # disable subset of "basic"
# reportGeneralTypeIssues = false
# reportMissingModuleSource = false
# reportOptionalCall = false
# reportOptionalIterable = false
# reportOptionalMemberAccess = false
# reportOptionalOperand = false
# reportOptionalSubscript = false
# reportPrivateImportUsage = false
# reportUnboundVariable = false

[tool.pytype]
inputs = [
    "src",
    "tests",
]

# * Dependency creation --------------------------------------------------------

[tool.pyproject2conda]
user_config = "config/userconfig.toml"
template_python = "requirements/py{py}-{env}"
template = "requirements/{env}"
python = "default"
channels = "conda-forge"
style = "yaml"
deps = "pip"

[tool.pyproject2conda.dependencies]
pytest-accept = { pip = true }

[tool.pyproject2conda.envs.dev]
groups = "dev"

[tool.pyproject2conda.envs.test]
groups = "test"
python = "all"

[tool.pyproject2conda.envs.test-extras]
groups = "test-extras"
python = "all"
skip_package = true

[tool.pyproject2conda.envs.uvxrun-tools]
reqs = [
    # these used solely for specking tools to be used with tools/uvxrun.py
    "conda-lock>=2.5.5",
    "grayskull>=2.5.3",
    "nbqa>=1.8.4",
    "pre-commit",
    "pyright>=1.1.392",
    "scriv",
    "twine>=5.0.0",
]
groups = "mypy"
skip_package = true
style = "requirements"

[tool.pyproject2conda.envs.example-env]
template_python = "slides/example-conda-env/py{py}-{env}"
template = "slides/example-virtual-env/{env}"
name = "python-packaging-tools-example-dev"
groups = "example"
skip_package = true
python = "default"
header = false
style = [ "requirements", "yaml" ]

# * uv -------------------------------------------------------------------------

[tool.uv]
managed = true
default-groups = [ "dev" ]
fork-strategy = "requires-python"
required-version = ">=0.5.21"

[tool.uv.pip]
annotation-style = "line"

# * Other tools ----------------------------------------------------------------

[tool.scriv]
format = "md"
md_header_level = "2"
new_fragment_template = "file: changelog.d/templates/new_fragment.md.j2"

[tool.commitizen]
use_shortcuts = true

[tool.cruft]
